--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,7 @@ img {
 }
 .form-part{
     width: 100%;
-    padding: 80px 0px;
+    padding: 80px 0px 145px;
     background: url("../images/main-form.png") center top no-repeat;
     background-size: cover;
 }
